# aurora-kernel-public

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  debug_elastic_connection.py  pyproject.toml  requirements-hackathon.txt  requirements.txt  test_agent_builder.py  test_agent_v2.py  test_retrieval.py
.github/workflows/: aurora_tick.yml
docs/: ARCHITECTURE.md  JUDGES.md  README.md
scripts/: index_corpus_elastic.py  make_evidence_pack.py  search_corpus_elastic.py
src/aurora_kernel/: api.py  chunker.py  corpus_loader.py  elastic_store.py  tick.py
